tests/checker/diagnostics/1000_mli_nested_path_zeroary_overapplied_10.mli.infer.expected
File "1000_mli_nested_path_zeroary_overapplied_10.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 1000_mli_nested_path_zeroary_overapplied_10 is not a valid module name.

File "1000_mli_nested_path_zeroary_overapplied_10.mli", line 7, characters 14-37:
7 | val x_kappa : int Outer_kappa.Inner.t
                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_kappa.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
